--- a/illreal/package.json
+++ b/illreal/package.json
@@ -8,9 +8,13 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@wordpress/block-library": "^2.27.0",
+    "bootstrap": "^4.5.3",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-image-background-slider": "0.0.4",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
@@ -21,8 +25,10 @@
     "gatsby-source-wordpress-experimental": "^6.1.0",
     "gatsby-transformer-sharp": "^2.9.0",
     "html-react-parser": "^1.1.1",
+    "jquery-slim": "^3.0.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "typeface-merriweather": "1.1.13",
