--- a/illreal/package.json
+++ b/illreal/package.json
@@ -11,7 +11,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@wordpress/block-library": "^2.27.0",
     "bootstrap": "^4.5.3",
-    "gatsby": "^2.30.1",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -23,14 +23,18 @@
     "gatsby-source-graphql": "^2.13.0",
     "gatsby-source-wordpress": "^3.9.0",
     "gatsby-source-wordpress-experimental": "^6.1.0",
+    "gatsby-theme-gallery": "^1.0.2",
     "gatsby-transformer-sharp": "^2.11.0",
     "html-react-parser": "^1.1.1",
     "jquery-slim": "^3.0.0",
     "lodash": "^4.17.20",
+    "photoswipe": "^4.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-photoswipe-gallery": "^1.3.4",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
   },
