--- a/illreal/package.json
+++ b/illreal/package.json
@@ -21,8 +21,8 @@
     "gatsby-plugin-sharp": "^2.13.3",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-graphql": "^2.13.0",
-    "gatsby-source-wordpress": "^3.9.0",
-    "gatsby-source-wordpress-experimental": "^6.1.0",
+    "gatsby-source-wordpress": "^3.11.0",
+    "gatsby-source-wordpress-experimental": "^7.0.4",
     "gatsby-theme-gallery": "^1.0.2",
     "gatsby-transformer-sharp": "^2.11.0",
     "html-react-parser": "^1.1.1",
@@ -35,8 +35,10 @@
     "react-helmet": "^5.2.1",
     "react-image-lightbox": "^5.1.1",
     "react-photoswipe-gallery": "^1.3.4",
+    "simple-react-lightbox": "^3.6.0",
     "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13"
+    "typeface-montserrat": "1.1.13",
+    "wp-graphql": "^1.0.0"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
