--- a/illreal/package.json
+++ b/illreal/package.json
@@ -16,12 +16,13 @@
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.11.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sharp": "^2.13.3",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-graphql": "^2.13.0",
-    "gatsby-source-wordpress": "^3.11.0",
+    "gatsby-source-wordpress": "^4.0.1",
     "gatsby-source-wordpress-experimental": "^7.0.4",
     "gatsby-transformer-sharp": "^2.11.0",
     "html-react-parser": "^1.1.1",
